--- a/assets/modal.styl
+++ b/assets/modal.styl
@@ -1,14 +1,14 @@
-@import './globals.styl'
 .react-modal-with-keys-action-background
-    background rgba(primary, .7)
+    background rgba(0,0,0, .7)
     width 100%
     height 100%
     position fixed
     z-index 99999
     top 0
     left 0
-    display none
     overflow scroll
+    display flex
+    justify-content center
     .react-modal-with-keys-action-wrapper
         position relative
         display table-cell
@@ -42,25 +42,6 @@
                     &:last-child
                         transform rotate(45deg)
                         top 19px
-
-            h3
-                color gray-five
-                margin 0
-                font-size 20px
-                font-weight 700
-                margin-bottom 12px
-                width 100%
-            p
-                word-wrap: break-word
-                font-weight 300
-                font-size 15px
-                width 100%
-                strong
-                    font-weight 400
-
-.active.react-modal-with-keys-action-background
-    display flex
-    justify-content center
 @media only screen and (min-width: 48em)
     .react-modal-with-keys-action-background
         .react-modal-with-keys-action-wrapper
