--- a/assets/modal.styl
+++ b/assets/modal.styl
@@ -28,20 +28,17 @@
             .react-modal-with-keys-action-close
                 position absolute
                 cursor pointer
-                right 30px
-                top -60px
+                right 50px
+                top -30px
                 div.react-modal-with-keys-action-x
                     position absolute
-                    width 30px
-                    height 30px
+                    width 60px
+                    height 0
                     border-top 3px solid white
-                    border-left 3px solid white
                     &:first-child
-                        transform rotate(225deg)
-                        top -19px
+                        transform rotate(135deg)
                     &:last-child
                         transform rotate(45deg)
-                        top 19px
 @media only screen and (min-width: 48em)
     .react-modal-with-keys-action-background
         .react-modal-with-keys-action-wrapper
@@ -49,5 +46,5 @@
                 width 50%
                 padding 25px 50px
                 .react-modal-with-keys-action-close
-                    right -20px
-                    top -60px
+                    right 0
+                    top -30px
